# SyGNet

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  python-app.yml
data/: sygnet_model_30Jun22_1058
examples/: basic_example.ipynb
src/sygnet/: __init__.py  attention.py  blocks.py  dataloaders.py  experimental.py  interface.py  loader.py  models.py  requirements.py  sygnet_dataloaders.py  sygnet_interface.py  sygnet_loader.py  sygnet_models.py  sygnet_requirements.py  sygnet_train.py  sygnet_tune.py  train.py  tune.py
test/: test_mixed_act.py  test_pipeline.py  test_sampler.py  test_saver.py  test_tuner.py
